<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alacrity</string>
    <string name="enter_ipaddr">Enter the IPAddr</string>
    <string name="ip_format_comment">(Each IP segment should be between 0 and 255)</string>
    <string name="ip_delimiter">.</string>
    <string name="default_ipaddr_part_1">192</string>
    <string name="default_ipaddr_part_2">168</string>
    <string name="default_ipaddr_part_3">0</string>
    <string name="default_ipaddr_part_4">1</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="set_default">Set as default</string>
    <string name="light_on">Light on</string>
    <string name="light_off">Light off</string>
    <string name="emit">Emit</string>
    <string name="sync">Sync</string>
    <string name="status">Status</string>
    <string name="default_status">Nothing detected</string>
    <string name="device_list_title">Devices</string>
</resources>