<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_ipaddr"
            android:id="@+id/textViewEnterIP" android:singleLine="true"
            android:textSize="20dp" android:layout_marginTop="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_format_comment"
            android:id="@+id/textViewComments" android:textSize="15dp" android:alpha="0.5"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp"
            android:id="@+id/linearLayoutIpChunkList">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_ipaddr_part_1"
                android:id="@+id/editViewIpAddr1" android:inputType="number" android:layout_weight="1"
                android:textStyle="bold|normal" android:singleLine="true" android:maxLength="3"
                android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_delimiter"
                android:id="@+id/textViewDot1" android:textStyle="bold"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_ipaddr_part_2"
                android:id="@+id/editViewIpAddr2" android:inputType="number" android:layout_weight="1"
                android:textStyle="bold|normal" android:singleLine="true" android:maxLength="3"
                android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_delimiter"
                android:id="@+id/textViewDot2" android:layout_gravity="center" android:textStyle="bold"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_ipaddr_part_3"
                android:id="@+id/editViewIpAddr3" android:inputType="number" android:layout_weight="1"
                android:textStyle="bold|normal" android:singleLine="true" android:maxLength="3"
                android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_delimiter"
                android:id="@+id/textViewDot3" android:textStyle="bold"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_ipaddr_part_4"
                android:id="@+id/editViewIpAddr4" android:inputType="number" android:layout_weight="1"
                android:textStyle="bold|normal" android:singleLine="true" android:maxLength="3"
                android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"  android:onClick="onClearButtonClick"
                android:id="@+id/buttonClear" android:layout_weight="1"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"  android:onClick="onResetButtonClick"
                android:id="@+id/buttonReset" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_default"
            android:id="@+id/buttonSetAsDefault" android:layout_marginTop="15dp"/>
    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp" android:id="@+id/radioGroupOptions">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_on"
                android:id="@+id/radioButtonOn" android:checked="false"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_off"
                android:id="@+id/radioButtonOff" android:checked="false"/>
    </RadioGroup>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/emit"
            android:id="@+id/buttonEmit" android:layout_marginTop="20dp"
            android:enabled="true" android:onClick="onEmitButtonClick"/>
</LinearLayout>