<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:id="@+id/textViewStatusTitle"
                android:layout_weight="1"
                android:textSize="20dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_status"
                android:id="@+id/textViewStatusContent"
                android:layout_weight="3"
                android:textSize="20dp"/>
    </LinearLayout>

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/deviceListView"
            android:layout_weight="1"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/emit"
            android:id="@+id/buttonEmit"
            android:layout_marginTop="20dp"
            android:enabled="false"
            />

</LinearLayout>